fix:增加请求超时提示

--- a/src/app.json
+++ b/src/app.json
@@ -36,5 +36,8 @@
         "selectedIconPath": "static/img/todo-active.png"
       }
     ]
+  },
+  "networkTimeout": {
+    "request": 30000
   }
 }
